--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 *.cb2
 
 ## Generated if empty string is given at "Please type another file name for output:"
-.pdf
+*.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
